All tests for Query Module updated based on new system design